# snaptastic

./: .travis.yml  AUTHORS  CMakeLists.txt  README.md  meson.build
data/: CMakeLists.txt  application.css  com.github.bartzaalberg.snapcenter.appdata.xml  com.github.bartzaalberg.snapcenter.desktop  com.github.bartzaalberg.snapcenter.gschema.xml  com.github.bartzaalberg.snapcenter.pkexec.policy  com.github.bartzaalberg.snaptastic.appdata.xml  com.github.bartzaalberg.snaptastic.appdata.xml.in  com.github.bartzaalberg.snaptastic.appdata.xml~  com.github.bartzaalberg.snaptastic.desktop  com.github.bartzaalberg.snaptastic.desktop.in  com.github.bartzaalberg.snaptastic.gschema.xml  com.github.bartzaalberg.snaptastic.pkexec.policy  meson.build
data/icons/: icons.gresource.xml
debian/: changelog  control  copyright
hooks/: pre-commit.hook
po/: CMakeLists.txt  LINGUAS  POTFILES  ca.po  com.github.bartzaalberg.bookmark-manager.pot  com.github.bartzaalberg.snaptastic.pot  es.po  fr.po  it.mo  it.po  ja.po  lt.po  nl.po  ru.po  tr.po
po/extra/: LINGUAS  POTFILES  extra.pot  fr.po  it.mo  it.po  ja.po  nl.po  ru.po
src/: Application.vala  Bookmark.vala  BookmarkListManager.vala  CommandHandler.vala  ConfigFileReader.vala  Constants.vala  FileManager.vala  IconHandler.vala  InstalledPackageRow.vala  ListBox.vala  ListBoxRow.vala  MainWindow.vala  MainWindow.vala~  Package.vala  Polkit.vala  ResponseTranslator.vala  SearchPackageRow.vala  SnapdHandler.vala  SnapdURIHandler.vala  StackManager.vala
src/Components/: DetailViewBanner.vala  HeaderBar.vala  HeaderLabel.vala
src/Dialogs/: Alert.vala  DeleteConfirm.vala
src/InstallApplication/: DesktopFileApplication.vala
src/Tests/: BookmarkTest.vala  tests.sh
src/Views/: DetailView.vala  EmptyView.vala  InstallView.vala  ListBookmarks.vala  ListView.vala  NotFoundView.vala  ProgressView.vala  WelcomeView.vala  WelcomeView.vala~
